@@ -1,0 +1,103 @@
+# CMAKE generated file: DO NOT EDIT!
+# Generated by "Unix Makefiles" Generator, CMake Version 2.4
+
+#=============================================================================
+# Set environment variables for the build.
+
+# The shell in which to execute make rules.
+SHELL = /bin/sh
+
+# The CMake executable.
+CMAKE_COMMAND = /usr/local/bin/cmake
+
+# The command to remove a file.
+RM = /usr/local/bin/cmake -E remove -f
+
+# The program to use to edit the cache.
+CMAKE_EDIT_COMMAND = /usr/local/bin/ccmake
+
+# The top-level source directory on which CMake was run.
+CMAKE_SOURCE_DIR = /home/paulfitz/cvs/yarp2/example/remote_check
+
+# The top-level build directory on which CMake was run.
+CMAKE_BINARY_DIR = /home/paulfitz/cvs/yarp2/example/remote_check
+
+# Default target executed when no arguments are given to make.
+default_target: all
+
+# Special rule for the target edit_cache
+edit_cache:
+	@echo "Running CMake cache editor..."
+	/usr/local/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+
+# Special rule for the target install
+install: preinstall
+	@echo "Install the project..."
+	/usr/local/bin/cmake -P cmake_install.cmake
+
+# Special rule for the target rebuild_cache
+rebuild_cache:
+	@echo "Running CMake to regenerate build system..."
+	/usr/local/bin/cmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+
+#=============================================================================
+# Special targets provided by cmake.
+
+# Suppress display of executed commands.
+$(VERBOSE).SILENT:
+
+# Disable implicit rules so canoncical targets will work.
+.SUFFIXES:
+
+.SUFFIXES: .hpux_make_needs_suffix_list
+
+# The main all target
+all: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 all
+
+# The main clean target
+clean:
+	$(MAKE) -f CMakeFiles/Makefile2 clean
+
+# Prepare targets for installation.
+preinstall: all
+	$(MAKE) -f CMakeFiles/Makefile2 preinstall
+
+# clear depends
+depend:
+	$(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
+
+#=============================================================================
+# Target rules for targets named remote_check
+
+# Build rule for target.
+remote_check: cmake_check_build_system
+	$(MAKE) -f CMakeFiles/Makefile2 remote_check
+
+# target for object file
+main.o:
+	$(MAKE) -f CMakeFiles/remote_check.dir/build.make CMakeFiles/remote_check.dir/main.o
+
+# Help Target
+help::
+	@echo "The following are some of the valid targets for this Makefile:"
+	@echo "... all (the default if no target is provided)"
+	@echo "... clean"
+	@echo "... depend"
+	@echo "... edit_cache"
+	@echo "... install"
+	@echo "... rebuild_cache"
+	@echo "... remote_check"
+	@echo "... main.o"
+
+
+
+#=============================================================================
+# Special targets to cleanup operation of make.
+
+# Special rule to run CMake to check the build system integrity.
+# No rule that depends on this can have commands that come from listfiles
+# because they might be regenerated.
+cmake_check_build_system:
+	$(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
+
